--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bshop-2.0-vite",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://alientheeight.github.io/CL-Workshop-BestShop-Vite/",
   "type": "module",
   "scripts": {
     "dev": "vite",
